--- a/3-Days/pom.xml
+++ b/3-Days/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
